--- a/css/style.css
+++ b/css/style.css
@@ -489,7 +489,7 @@ a {
         transform: translateY(50px);
         transition: 0.5s;
         opacity: 0;
-        z-index: 99;
+        /* z-index: 99; */
     }
     .despre-noi:hover .second-ul {
         opacity: 1;
@@ -1826,6 +1826,7 @@ main {
     .container-poza-domenii img {
         width: 100%;
         height: 100%;
+        max-height: 1100px;
     }
     .text-sectiune {
         min-width: 450px;
@@ -2118,10 +2119,6 @@ main {
     transition: 1s all;
 }
 
-.recenzie:hover {
-    transform: translateY(-50px)
-}
-
 .second-recenzie {
     left: 25;
 }
@@ -2165,19 +2162,913 @@ main {
         width: 95%;
         max-width: 1500px;
     }
+    .lista-recenzii::-webkit-scrollbar {
+        color: rgb(160, 149, 149);
+        opacity: 0;
+    }
+    .recenzie:hover {
+        transform: translateY(-50px)
+    }
 }
 
 
 /* Track */
-
-::-webkit-scrollbar {
-    color: white;
-}
 
 .padure {
     background-image: url(/poze/background-padure.png);
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 200px;
+    height: 100%;
+    row-gap: 50px;
+    margin-top: -10px;
+}
+
+.container-padure {
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+}
+
+.optiune-padure {
+    width: 240px;
+    margin: auto;
+    border-radius: 100%;
+    height: 240px;
+    ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    line-height: 5px;
+    position: relative;
+}
+
+.optiune-padure::after {
+    border: 2px dashed white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: '';
+    border-radius: 100%;
+}
+
+.optiune-padure:hover::after {
+    animation: rotate 0.8s linear infinite;
+}
+
+.optiune-padure p {
+    color: #fff;
+    font-weight: 900;
+    text-transform: capitalize;
+    font-size: 15px;
+}
+
+.optiune-padure h1 {
+    font-size: 30px;
+    font-family: 'Fredoka One', sans-serif;
+    font-weight: 900;
+}
+
+.calendar {
+    margin-top: 100px;
+}
+
+.padure {
+    color: white;
+}
+
+.teacher {
+    margin-bottom: 100px;
+    ;
+}
+
+.padure svg {
+    fill: white;
+    width: 40px;
+    height: 45px;
+}
+
+@media(min-width:780px) {
+    .container-padure {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 80%;
+        margin: auto;
+        padding-top: 100px;
+    }
+    .calendar {
+        margin: 0;
+    }
+    .teacher {
+        margin: 0;
+    }
+}
+
+@media(min-width:1000px) {
+    .container-padure {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        ;
+    }
+}
+
+.optiune-padure {
+    transition: 0.5s all;
+    position: relative;
+}
+
+
+/*despre-profesori start here ****************/
+
+.despre-profesorii-nostri {
+    text-align: center;
+    width: 95%;
+    margin: auto;
+    background-image: url('/poze/imagine-pasarele.png');
+    background-position: center right;
+    background-repeat: no-repeat;
+    line-height: 20px;
+    margin-top: 50px;
+    padding-bottom: 100px;
+}
+
+.container-profesori {
+    max-width: 900px;
+    margin: auto;
+}
+
+.despre-profesorii-nostri h3 {
+    font-size: 17px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    color: #ff4880;
+    margin-bottom: 12px;
+    font-weight: 600;
+    font-family: 'Schoolbell', cursive;
+}
+
+.despre-profesorii-nostri p {
+    line-height: 30px;
+    ;
+}
+
+.despre-profesorii-nostri img {
+    margin-top: 50px;
+}
+
+.despre-profesorii-nostri h2 {
+    font-size: 32px;
+    color: #271344;
+    font-family: 'Fredoka One', sans-serif;
+}
+
+
+/*here starts section ore******/
+
+.section-ore {
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    text-align: center;
+    position: relative;
+    background-color: rgb(37, 18, 65, 0.9);
+    padding-bottom: 20px;
+}
+
+.section-ore::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url(/poze/poze-copii.jpg);
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.vezi_evenimente {
+    display: flex;
+    justify-content: center;
+}
+
+.vezi_evenimente a {
+    width: 280px;
+    margin-top: 50px;
+}
+
+.orar-sectiune-ore {
+    padding-top: 50px;
+}
+
+.orar-sectiune-ore a {
+    font-size: 25px;
+    margin-bottom: 28px;
+    display: inline-block;
+    padding: 13px 24px;
+    border-radius: 30px;
+    border-radius: 30px;
+    border-radius: 30px;
+    background: #ffc000;
+    border: 2px solid #fff;
+    font-weight: 600;
+    color: #271344;
+    cursor: pointer;
+    box-shadow: 0 0 0 rgb(255 72 128 / 40%);
+    animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    }
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    }
+    100% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+.orar-sectiune-ore h1 {
+    color: white;
+    font-family: 'Hammersmith One', sans-serif;
+    font-size: 28px;
+    ;
+}
+
+.container-ore-section-ore {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 20px;
+    row-gap: 20px;
+}
+
+.casuta-timp {
+    width: 144px;
+    min-height: 80px;
+    max-height: 80px;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    border-radius: 20px;
+    line-height: 0px;
+}
+
+.casuta-timp div {
+    width: 100%;
+}
+
+.hours {
+    border: 2px solid #ffc000;
+}
+
+.container-culoare {
+    height: 40px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    opacity: 0.5;
+}
+
+.hours .container-culoare {
+    background-color: #ffc000;
+    width: 100%;
+}
+
+.container-ore-section-ore p {
+    color: white;
+    font-size: 16px;
+}
+
+.days {
+    border: 2px solid #ff4880;
+}
+
+.days .container-culoare {
+    background-color: #ff4880;
+}
+
+.minutes {
+    border: 2px solid #abcd52;
+}
+
+.minutes .container-culoare {
+    background-color: #abcd52;
+}
+
+.seconds {
+    border: 2px solid #1ab9ff;
+}
+
+.seconds .container-culoare {
+    background-color: #1ab9ff;
+    ;
+}
+
+@media(min-width:1024px) {
+    .casuta-timp p {
+        font-size: 30px;
+    }
+    .casuta-timp {
+        min-height: 100px;
+        max-height: 100px;
+    }
+    .section-ore {
+        padding-bottom: 100px;
+    }
+}
+
+
+/* stiri recente start here *******************/
+
+.first-stiri-container {
+    line-height: 20px;
+    padding-top: 100px;
+}
+
+.first-stiri-container h3 {
+    font-size: 17px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    color: #ff4880;
+    margin-bottom: 12px;
+    font-weight: 600;
+    font-family: 'Schoolbell', cursive;
+}
+
+.first-stiri-container h2 {
+    font-family: 'Fredoka One', sans-serif;
+    color: #271344;
+    font-size: 32px;
+    font-weight: 900;
+}
+
+.fisrt-stiri-container p {
+    font-family: 'Prompt', sans-serif;
+    color: #777777;
+    font-size: 20px;
+}
+
+.second-stiri-container {
+    padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 95%;
+    margin: auto;
+    line-height: 10px;
+    padding-bottom: 20px;
+}
+
+.second-stiri-container img {
+    width: 100%;
+    max-width: 450px;
+    height: 300px;
+    border-radius: 10px;
+}
+
+.second-stiri-container:hover img {
+    animation: shake 0.5s;
+}
+
+.second-stiri-container h2 {
+    font-family: 'Fredoka One', sans-serif;
+    font-size: 25px;
+    color: #271344;
+    max-width: 350px;
+    text-align: left;
+    line-height: 30px;
+}
+
+.second-stiri-container p {
+    font-family: 'Prompt', sans-serif;
+    color: #777777;
+    font-size: 15px;
+}
+
+.second-stiri-container a p {
+    color: #ff4880;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 0px;
+    margin-bottom: 5px;
+}
+
+.second-stiri-container a span {
+    width: 100%;
+    height: 2px;
+    display: inline-block;
+    background-color: #ff4880;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
+
+
+/* galerie start hjere ******************/
+
+.galerie h3 {
+    font-size: 17px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    color: #ff4880;
+    margin-bottom: 12px;
+    font-weight: 600;
+    font-family: 'Schoolbell', cursive;
+}
+
+.galerie h2 {
+    font-family: 'Fredoka One', sans-serif;
+    color: #271344;
+    font-size: 32px;
+    font-weight: 900;
+}
+
+.galerie p {
+    font-family: 'Prompt', sans-serif;
+    color: #777777;
+    font-size: 20px;
+}
+
+.first-galerie-ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 20px;
+    flex-wrap: wrap;
+}
+
+.first-galerie-ul li {
+    border-radius: 25px;
+    background-color: rgba(119, 119, 119, 0.12);
+    font-family: 'Fredoka One', sans-serif;
+    font-weight: 400;
+    margin: 10px 7px;
+    text-transform: uppercase;
+    cursor: pointer;
+    min-width: 80px;
+    padding: 5px 20px 5px 20px;
+}
+
+.first-galerie-ul li span {
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: capitalize;
+    color: #271344;
+    position: relative;
+}
+
+.container-poze-galerie {
+    display: flex;
+    flex-wrap: wrap;
+    width: 95%;
+    justify-content: center;
+    row-gap: 20px;
+    margin: auto;
+    margin-top: 50px;
+}
+
+.container-poza-img {
+    width: 90%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+.container-poza-img img {
+    width: 100%;
+    border-radius: 20px;
+    height: 100%;
+}
+
+@media(min-width:600px) {
+    .container-poze-galerie {
+        justify-content: unset;
+        column-gap: 10%;
+    }
+    .container-poza-img {
+        width: 45%;
+    }
+}
+
+@media(min-width:800px) {
+    .container-poze-galerie {
+        /* justify-content: center; */
+        column-gap: 20px;
+        max-width: 1700px;
+    }
+    .container-poza-img {
+        width: 30%;
+    }
+}
+
+.container-poza-img {
+    position: relative;
+    overflow: hidden;
+}
+
+.container-poza-img::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#e66465, #9198e5);
+    position: absolute;
+    opacity: 0.5;
+    transform: translateY(100%);
+    transition: 0.5s;
+}
+
+.plus-container {
+    font-size: 30px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0px;
+    transform: translateY(100%);
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.plus-container p {
+    border: 5px solid white;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    color: white;
+}
+
+.container-poza-img:hover::before {
+    transform: translateY(0);
+}
+
+.container-poza-img:hover .plus-container {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.first-galerie-ul li {
+    transition: 0.5s;
+}
+
+.first-galerie-ul li:nth-child(1) {
+    background-color: #ff4880;
+}
+
+.first-galerie-ul li:nth-child(1) span {
+    color: white;
+}
+
+.first-galerie-ul li:hover {
+    background-color: #ff4880;
+}
+
+.first-galerie-ul li:hover span {
+    color: white;
+}
+
+.inscriere-gradinita {
+    background-color: #ABCD52;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding-bottom: 20px;
+}
+
+.container-inscriere-gradinita {
+    width: 90%;
+    margin: auto;
+    line-height: 30px;
+    padding-top: 20px;
+}
+
+.text-inscriere-gradinita span {
+    font-style: normal;
+    color: #ff4880;
+}
+
+.text-inscriere-gradinita h1 {
+    color: #FFFFFF;
+    margin-bottom: 5px;
+    font-family: "Alfa Slab One", Sans-serif;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.text-inscriere-gradinita h3 {
+    color: #FFFFFF;
+}
+
+.final-button a {
+    font-size: 20px;
+    background-color: #ff4880;
+    padding: 15px 25px 15px 25px;
+    color: white;
+    border-radius: 10px;
+    transition: 0.5s all;
+}
+
+.final-button a:hover {
+    background-color: #271344;
+}
+
+@media(min-width:1250px) {
+    .container-inscriere-gradinita {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        column-gap: 50px;
+        width: 95%;
+        max-width: 1200px;
+        margin: auto;
+    }
+}
+
+.first-footer {
+    background-color: #351C5A;
+}
+
+.first-container-footer img {
+    width: 130px;
+    height: 50px;
+}
+
+.first-container-footer {
+    width: 97%;
+    margin: auto;
+    color: white;
+    padding-top: 50px;
+}
+
+.first-container-footer p {
+    font-size: 18px;
+}
+
+.container-facebook-aux {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.first-footer svg {
+    width: 20px;
+    fill: #ffc000;
+    height: 20px;
+}
+
+.svg-text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 20px;
+    line-height: 25px;
+}
+
+.svg-uri {
+    font-size: 15px;
+    line-height: 10px;
+}
+
+.footer-contacteazane {
+    width: 95%;
+    margin: auto;
+    color: white;
+}
+
+.footer-contacteazane h1 {
+    font-size: 40px;
+}
+
+.second-ul-footer p {
+    color: #ffc000;
+}
+
+.meniu-footer h2 {
+    color: white;
+    font-size: 40px;
+}
+
+.second-ul-footer {
+    width: 95%;
+    margin: auto;
+    line-height: 5px;
+}
+
+.second-ul-footer li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 10px;
+}
+
+.second-ul-footer li a {
+    color: white;
+    text-decoration: underline;
+    text-decoration-color: #ffc000;
+    text-decoration-style: 2px solid;
+    font-size: 20px;
+}
+
+.abonare {
+    width: 95%;
+    margin: auto;
+    color: white;
+    line-height: 20px;
+}
+
+.abonare h2 {
+    font-size: 30px;
+}
+
+.abonare input {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+}
+
+input[type="text"]::placeholder {
+    padding-left: 20px;
+}
+
+.abonare form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.abonare a {
+    width: 100%;
+    background-color: #ff4880;
+    display: block;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-size: 20px;
+    transition: 0.5s all;
+}
+
+.abonare a:hover {
+    background-color: white;
+    color: #271344;
+    align-items: center;
+}
+
+@media(min-width:780px) {
+    .container-meniu-contactare {
+        display: flex;
+        flex-direction: row;
+        width: 80%;
+        margin-left: 20px;
+    }
+    .meniu-footer {
+        margin-top: 26px;
+    }
+    .meniu-footer ul {
+        line-height: 20px;
+    }
+    .second-ul-footer a {
+        font-size: 17px;
+        width: 200px;
+    }
+}
+
+@media(min-width:1000px) {
+    .container-footer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        max-width: 1200px;
+        margin: auto;
+    }
+    .meniu-footer ul {
+        line-height: 10px;
+        font-size: 4px;
+    }
+    .footer-contacteazane h1 {
+        font-size: 25px;
+    }
+    .meniu-footer h2 {
+        font-size: 25px;
+    }
+    .svg-text {
+        height: 55px;
+    }
+    footer {
+        max-height: 500px;
+    }
+    .second-ul-footer li {
+        height: 45px;
+    }
+    .second-ul-footer {
+        line-height: 0px;
+    }
+    .footer-contacteazane {
+        margin-top: 30px;
+        ;
+    }
+    .abonare {
+        max-width: 300px;
+    }
+    .first-container-footer {
+        max-width: 300px;
+    }
+}
+
+.second-footer {
+    background-color: #271344;
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    height: 50px;
+    align-items: center;
+}
+
+nav {
+    top: 0;
+    z-index: 100;
+    left: 0;
+    right: 0;
+}
+
+.container-padure {
+    max-width: 1200px;
+}
+
+.padure {
+    overflow: hidden;
+}
+
+@media(min-width:1200px) {
+    .second-ul {
+        z-index: -2;
+    }
+}
+
+.up {
+    position: fixed;
+    bottom: 20%;
+    background-color: #FF4880;
+    z-index: 100;
+    color: white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    right: 0;
+    justify-content: center;
+    border-radius: 10px;
+    font-size: 20px;
 }
