--- a/css/style.css
+++ b/css/style.css
@@ -492,9 +492,9 @@ a {
         /* z-index: 99; */
     }
     .despre-noi:hover .second-ul {
-        opacity: 1;
+        opacity: 0;
         transform: translateY(0px);
-        z-index: 1;
+        z-index: -100;
     }
     .container-second-ul {
         width: 90%;
@@ -3071,4 +3071,15 @@ nav {
     justify-content: center;
     border-radius: 10px;
     font-size: 20px;
+}
+
+.container-padure {
+    transform: translateX(100%);
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.padure:hover .container-padure {
+    transform: translateX(0);
+    opacity: 1;
 }
